[+] add or substract size brush

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "world.h": "c",
-        "sstream": "c"
+        "sstream": "c",
+        "cmath": "c"
     }
 }
