[*] codding style mini map

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "world.h": "c",
         "sstream": "c",
-        "cmath": "c"
+        "cmath": "c",
+        "keyboard.h": "c"
     }
 }
